<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/my_action_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/weekTextStyle"
                android:text="@string/calendar_sunday" />

            <TextView
                style="@style/weekTextStyle"
                android:text="@string/calendar_monday" />

            <TextView
                style="@style/weekTextStyle"
                android:text="@string/calendar_tuesday" />

            <TextView
                style="@style/weekTextStyle"
                android:text="@string/calendar_wednsday" />

            <TextView
                style="@style/weekTextStyle"
                android:text="@string/calendar_thursday" />

            <TextView
                style="@style/weekTextStyle"
                android:text="@string/calendar_firday" />

            <TextView
                style="@style/weekTextStyle"
                android:text="@string/calendar_saturday" />
        </LinearLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/calendar_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
