<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_parent"
    android:layout_width="match_parent"
    android:layout_height="150.0dp"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/tv_record_state"
        style="@style/subtitleTextStyle"
        android:layout_marginTop="8dp"
        android:text="@string/str_click_start_record" />

    <ImageView
        android:id="@+id/iv_record_state"
        style="@style/subtitleTextStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/record_start" />

    <View
        android:id="@+id/record_bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="?android:attr/listDivider"/>

    <LinearLayout
        android:id="@+id/ll_record_bottom"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/subtitleTextStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_cancel" />

        <View
            android:layout_width="1.0dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tv_ok"
            style="@style/subtitleTextStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_ok" />
    </LinearLayout>

</LinearLayout>